<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Title -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/singup"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Sign in with Google Button -->
    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_signin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Container for Email and Password -->
    <LinearLayout
        android:id="@+id/login_container"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btn_google_signin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <!-- Email EditText -->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_edit_text"
            android:padding="12dp" />

        <!-- Password EditText -->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edit_text"
            android:padding="12dp"
            android:layout_marginTop="10dp" />

        <!-- Sign Up Button -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/singup"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/white"
            android:layout_marginTop="20dp" />

        <!-- Already have an account? Login Text -->
        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Already have an account? Login"
            android:textColor="@color/blue"
            android:textSize="15sp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/btn_signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
